--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -210,4 +210,7 @@
     <string name="write_to_tag">写入数据</string>
     <string name="read_to_tag">读取数据</string>
     <string name="default_note_text">请输入要写入数据!</string>
+
+    <string name="air_you">优</string>
+    <string name="null_data">--</string>
 </resources>
